@@ -1,8 +1,8 @@
 === v0.2.3 - master
 Autocomplete:
-    + Hide snippet if focus is lost.
     + Class name to package info.
     + Clear `editWord` if input dot.
+    + Hide snippet if focus is lost.
     + Make auto import.
     * Improved accuracy and speed auto adding paired characters.
     * Fixed scroll bar.
@@ -10,6 +10,7 @@ Autocomplete:
     - Flag of keywords.
 CodeArea:
     + Auto adding space after pressed Enter.
+    + Auto removing space after pressed Backspace.
 
 === v0.2.2
 Autocomplete:
